fix(card): fix the card sizes, title, and price alignment

--- a/packages/portal/src/styles/styles.scss
+++ b/packages/portal/src/styles/styles.scss
@@ -58,3 +58,9 @@ ul {
     display: block;
   }
 }
+
+.mat-mdc-card {
+height:490px;
+
+}
+
